rust/src/ffi_bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of GDExtensionCallError"][::std::mem::size_of::<GDExtensionCallError>() - 12usize];
    ["Alignment of GDExtensionCallError"][::std::mem::align_of::<GDExtensionCallError>() - 4usize];
    ["Offset of field: GDExtensionCallError::error"]
        [::std::mem::offset_of!(GDExtensionCallError, error) - 0usize];
    ["Offset of field: GDExtensionCallError::argument"]
        [::std::mem::offset_of!(GDExtensionCallError, argument) - 4usize];
    ["Offset of field: GDExtensionCallError::expected"]
        [::std::mem::offset_of!(GDExtensionCallError, expected) - 8usize];
};
pub type GDExtensionVariantFromTypeConstructorFunc = ::std::option::Option<
    unsafe extern "C" fn(arg1: GDExtensionUninitializedVariantPtr, arg2: GDExtensionTypePtr),
>;
pub type GDExtensionTypeFromVariantConstructorFunc = ::std::option::Option<
    unsafe extern "C" fn(arg1: GDExtensionUninitializedTypePtr, arg2: GDExtensionVariantPtr),
>;
pub type GDExtensionVariantGetInternalPtrFunc = ::std::option::Option<
    unsafe extern "C" fn(arg1: GDExtensionVariantPtr) -> *mut ::std::os::raw::c_void,
>;
pub type GDExtensionPtrOperatorEvaluator = ::std::option::Option<
    unsafe extern "C" fn(
        p_left: GDExtensionConstTypePtr,
        p_right: GDExtensionConstTypePtr,
        r_result: GDExtensionTypePtr,
    ),
>;
pub type GDExtensionPtrBuiltInMethod = ::std::option::Option<
    unsafe extern "C" fn(
        p_base: GDExtensionTypePtr,
        p_args: *const GDExtensionConstTypePtr,
        r_return: GDExtensionTypePtr,
        p_argument_count: ::std::os::raw::c_int,
    ),
>;
pub type GDExtensionPtrConstructor = ::std::option::Option<
    unsafe extern "C" fn(
        p_base: GDExtensionUninitializedTypePtr,
        p_args: *const GDExtensionConstTypePtr,
    ),
>;
pub type GDExtensionPtrDestructor =
    ::std::option::Option<unsafe extern "C" fn(p_base: GDExtensionTypePtr)>;
pub type GDExtensionPtrSetter = ::std::option::Option<
    unsafe extern "C" fn(p_base: GDExtensionTypePtr, p_value: GDExtensionConstTypePtr),
>;
pub type GDExtensionPtrGetter = ::std::option::Option<
    unsafe extern "C" fn(p_base: GDExtensionConstTypePtr, r_value: GDExtensionTypePtr),
>;
pub type GDExtensionPtrIndexedSetter = ::std::option::Option<
    unsafe extern "C" fn(
        p_base: GDExtensionTypePtr,
        p_index: GDExtensionInt,
        p_value: GDExtensionConstTypePtr,
    ),
>;
pub type GDExtensionPtrIndexedGetter = ::std::option::Option<
    unsafe extern "C" fn(
        p_base: GDExtensionConstTypePtr,
        p_index: GDExtensionInt,
        r_value: GDExtensionTypePtr,
    ),
>;
pub type GDExtensionPtrKeyedSetter = ::std::option::Option<
    unsafe extern "C" fn(
        p_base: GDExtensionTypePtr,
        p_key: GDExtensionConstTypePtr,
        p_value: GDExtensionConstTypePtr,
    ),
>;
pub type GDExtensionPtrKeyedGetter = ::std::option::Option<
    unsafe extern "C" fn(
        p_base: GDExtensionConstTypePtr,
        p_key: GDExtensionConstTypePtr,
        r_value: GDExtensionTypePtr,
    ),
>;
pub type GDExtensionPtrKeyedChecker = ::std::option::Option<
    unsafe extern "C" fn(
        p_base: GDExtensionConstVariantPtr,
        p_key: GDExtensionConstVariantPtr,
    ) -> u32,
>;
pub type GDExtensionPtrUtilityFunction = ::std::option::Option<
    unsafe extern "C" fn(
        r_return: GDExtensionTypePtr,
        p_args: *const GDExtensionConstTypePtr,
        p_argument_count: ::std::os::raw::c_int,
    ),
>;
pub type GDExtensionClassConstructor =
    ::std::option::Option<unsafe extern "C" fn() -> GDExtensionObjectPtr>;
pub type GDExtensionInstanceBindingCreateCallback = ::std::option::Option<
    unsafe extern "C" fn(
        p_token: *mut ::std::os::raw::c_void,
        p_instance: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void,
>;
pub type GDExtensionInstanceBindingFreeCallback = ::std::option::Option<
    unsafe extern "C" fn(
        p_token: *mut ::std::os::raw::c_void,
        p_instance: *mut ::std::os::raw::c_void,
        p_binding: *mut ::std::os::raw::c_void,
    ),
>;
pub type GDExtensionInstanceBindingReferenceCallback = ::std::option::Option<
    unsafe extern "C" fn(
        p_token: *mut ::std::os::raw::c_void,
        p_binding: *mut ::std::os::raw::c_void,
        p_reference: GDExtensionBool,
    ) -> GDExtensionBool,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GDExtensionInstanceBindingCallbacks {
    pub create_callback: GDExtensionInstanceBindingCreateCallback,
    pub free_callback: GDExtensionInstanceBindingFreeCallback,
    pub reference_callback: GDExtensionInstanceBindingReferenceCallback,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of GDExtensionInstanceBindingCallbacks"]
        [::std::mem::size_of::<GDExtensionInstanceBindingCallbacks>() - 24usize];
    ["Alignment of GDExtensionInstanceBindingCallbacks"]
        [::std::mem::align_of::<GDExtensionInstanceBindingCallbacks>() - 8usize];
    ["Offset of field: GDExtensionInstanceBindingCallbacks::create_callback"]
        [::std::mem::offset_of!(GDExtensionInstanceBindingCallbacks, create_callback) - 0usize];
    ["Offset of field: GDExtensionInstanceBindingCallbacks::free_callback"]
        [::std::mem::offset_of!(GDExtensionInstanceBindingCallbacks, free_callback) - 8usize];
    ["Offset of field: GDExtensionInstanceBindingCallbacks::reference_callback"]
        [::std::mem::offset_of!(GDExtensionInstanceBindingCallbacks, reference_callback) - 16usize];
};
pub type GDExtensionClassInstancePtr = *mut ::std::os::raw::c_void;
pub type GDExtensionClassSet = ::std::option::Option<
    unsafe extern "C" fn(
        p_instance: GDExtensionClassInstancePtr,
        p_name: GDExtensionConstStringNamePtr,
        p_value: GDExtensionConstVariantPtr,
    ) -> GDExtensionBool,
>;
pub type GDExtensionClassGet = ::std::option::Option<
    unsafe extern "C" fn(
        p_instance: GDExtensionClassInstancePtr,
        p_name: GDExtensionConstStringNamePtr,
        r_ret: GDExtensionVariantPtr,
    ) -> GDExtensionBool,
>;
pub type GDExtensionClassGetRID =
    ::std::option::Option<unsafe extern "C" fn(p_instance: GDExtensionClassInstancePtr) -> u64>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GDExtensionPropertyInfo {
    pub type_: GDExtensionVariantType,
    pub name: GDExtensionStringNamePtr,
    pub class_name: GDExtensionStringNamePtr,
    pub hint: u32,
    pub hint_string: GDExtensionStringPtr,
    pub usage: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of GDExtensionPropertyInfo"][::std::mem::size_of::<GDExtensionPropertyInfo>() - 48usize];
    ["Alignment of GDExtensionPropertyInfo"]
        [::std::mem::align_of::<GDExtensionPropertyInfo>() - 8usize];
    ["Offset of field: GDExtensionPropertyInfo::type_"]
        [::std::mem::offset_of!(GDExtensionPropertyInfo, type_) - 0usize];
    ["Offset of field: GDExtensionPropertyInfo::name"]
        [::std::mem::offset_of!(GDExtensionPropertyInfo, name) - 8usize];
    ["Offset of field: GDExtensionPropertyInfo::class_name"]
        [::std::mem::offset_of!(GDExtensionPropertyInfo, class_name) - 16usize];
    ["Offset of field: GDExtensionPropertyInfo::hint"]
        [::std::mem::offset_of!(GDExtensionPropertyInfo, hint) - 24usize];
    ["Offset of field: GDExtensionPropertyInfo::hint_string"]
        [::std::mem::offset_of!(GDExtensionPropertyInfo, hint_string) - 32usize];
    ["Offset of field: GDExtensionPropertyInfo::usage"]
        [::std::mem::offset_of!(GDExtensionPropertyInfo, usage) - 40usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GDExtensionMethodInfo {
    pub name: GDExtensionStringNamePtr,
    pub return_value: GDExtensionPropertyInfo,
    pub flags: u32,
    pub id: i32,
    pub argument_count: u32,
    pub arguments: *mut GDExtensionPropertyInfo,
    pub default_argument_count: u32,
    pub default_arguments: *mut GDExtensionVariantPtr,
}
